apps/sites/avertbhp/additional-k8s-objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avertbhp
  namespace: sites
spec:
  selector:
    app: avertbhp
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
