apps/sites/avertbhp/additional-k8s-objects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: avertbhp
  namespace: sites
spec:
  ingressClassName: nginx
  rules:
  - host: avertbhp.pl
    http:
      paths:
      - backend:
          service:
            name: avertbhp
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - avertbhp.pl
    secretName: avertbhp.pl
